# document-api-rag

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: update-readme.md  update-tests.md
.claude/hooks/: remind-update-tests.sh
app/: dependencies.py  logging_config.py  main.py  middleware.py
app/core/: config.py  rate_limit.py  security.py
app/db/: mongodb.py
app/models/: chunk.py  document.py  refresh_token.py  revoked_token.py  user.py
app/routers/: __init__.py  auth.py  documents.py  health.py  search.py
app/schemas/: __init__.py  auth.py  common.py  document.py  health.py  search.py
app/services/: auth_service.py  chunk_storage_service.py  chunking_service.py  document_service.py  embedding_service.py  ingestion_service.py  parsing_service.py  retrieval_service.py  storage_service.py  user_service.py
docker/: Dockerfile  docker-compose.yml
tests/: conftest.py  test_auth.py  test_auth_service.py  test_chunk_storage_service.py  test_chunking_service.py  test_config.py  test_cors.py  test_dependencies.py  test_documents_router.py  test_embedding_service.py  test_health.py  test_ingestion_service.py  test_logging_config.py  test_mongodb.py  test_parsing_service.py  test_rate_limit.py  test_readiness.py  test_request_id.py  test_retrieval_service.py  test_search_router.py  test_security.py  test_storage_service.py  test_user_service.py  test_vector_index.py
