[project]
name = "document-api-rag"
version = "0.1.0"
description = "Document ingestion + retrieval-augmented generation API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.139.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pymongo>=4.17.0",
    "slowapi>=0.1.10",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "poethepoet>=0.48.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

# --- Task runner (poethepoet) ---
# Run any task with:  uv run poe <task>
#   uv run poe start   -> dev server with auto-reload
#   uv run poe serve   -> production server (no reload)
#   uv run poe lint     |  poe format  |  poe test  |  poe check
[tool.poe.tasks]
start = "uvicorn app.main:app --reload"
serve = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
lint = "ruff check ."
format = "ruff format ."
test = "pytest -q"
check = ["lint", "test"]  # run lint then tests in one go
db-up = "docker compose -f docker/docker-compose.yml up -d mongodb"      # start Mongo (Atlas Local)
db-down = "docker compose -f docker/docker-compose.yml down"             # stop the stack
db-logs = "docker compose -f docker/docker-compose.yml logs -f mongodb"  # tail Mongo logs

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
